--- a/django/templates/side02.html
+++ b/django/templates/side02.html
@@ -7,6 +7,9 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>내 주변 정비소</title>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=dd814cd8c09cb0d6fe824b8ab473ed93"></script>
+        <link href = "{% static 'static01/css/styles.css' %}" rel = "stylesheet"/>
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -51,6 +54,7 @@
             border-radius: 5px;
             cursor: pointer;
             }
+
         </style>
     </head>
     <body>
@@ -81,13 +85,163 @@
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
                     <h1 class="display-4 fw-bolder">내 주변 정비소 찾기</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">현재 내 위치를 기준으로
-                    <br>5km이내 정비소를 안내합니다. </p>
+                    <p class="lead fw-normal text-white-50 mb-0">현재 내 위치를 기준으로 5km이내 정비소를 안내합니다.
+                    <br>마커를 클릭하면 정비소 정보를 확인할 수 있습니다. </p>
                 </div>
             </div>
         </header>
+
         <!-- Section-->
-        내용
+        <p id="lat" type ="text"></p>
+        <p id="lon" type ="text"></p>
+
+        <div style="width:900px;height:80px;margin:auto;margin-top:30px;text-align: center">
+            <button id='btn' class = "btn btn-outline-dark mt-auto" type="button" style="width:150px;height:50px;margin:auto">정비소 찾기</button>
+        </div>
+
+        <div id="map" style="width:900px;height:600px;margin:auto;margin-bottom:30px"></div>
+
+
+        <div id="list">
+            <p id="new"></p>
+        </div>
+
+
+
+
+
+        <script>
+             var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+                mapOption = {
+                    center: new kakao.maps.LatLng(37.503349112980715, 127.049869094305), // 지도의 중심좌표
+                    level: 5 // 지도의 확대 레벨
+                };
+
+             var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+
+             var x = document.getElementById("lat");
+             var y = document.getElementById("lon");
+
+             window.onload = function getLocation() {
+                 if(navigator.geolocation) {
+                     navigator.geolocation.getCurrentPosition(
+                         function successCallback(position) {
+                             x.value = position.coords.latitude;
+                             y.value = position.coords.longitude;
+                         }, function errorCallback() {
+                             x.value = 37.503349112980715;
+                             y.value = 127.049869094305;
+                         }
+                     )
+                 }
+             }
+
+
+             var btn = document.getElementById('btn')
+             btn.addEventListener('click', show_repairs) // 버튼을 누르면 show_repairs함수 실행
+
+             function show_repairs(){
+                 var input_lat = document.querySelector('p[id = "lat"]');
+                 var input_lon = document.querySelector('p[id = "lon"]');
+                 console.log(input_lat.value);
+                 console.log(input_lon.value);
+
+                 $.ajax({
+                     url: 'show_repairs',
+                     type: 'GET',
+                     data:{
+                         'input_lat': input_lat.value,
+                         'input_lon': input_lon.value
+                     },
+                     success: function(data){ //data: 비동기 통신으로 받은 데이터
+                         console.log(data['list'])
+
+                         // 마커를 표시할 위치데이터
+                         var positions = data['list'];
+
+                         var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+                            mapOption = {
+                                center: new kakao.maps.LatLng(input_lat.value, input_lon.value), // 지도의 중심좌표
+                                level: 5 // 지도의 확대 레벨
+                         };
+                         var map = new kakao.maps.Map(mapContainer, mapOption); // 지도 생성
+
+                         var imageSrc= "http://t1.daumcdn.net/mapjsapi/images/marker.png"; // 마커의 이미지 주소
+                         var imageSize = new kakao.maps.Size(24, 35); // 마커 이미지의 크기
+                         var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize); // 마커 이미지를 생성
+
+                         for (var i = 0; i < positions.length; i ++) {
+                             // 마커를 생성
+                             var marker = new kakao.maps.Marker({
+                                 map: map, // 마커를 표시할 지도
+                                 position: new kakao.maps.LatLng(positions[i].좌표[1], positions[i].좌표[0]), // 마커를 표시할 위치
+                                 image : markerImage // 마커 이미지
+                             });
+
+                             var overImage = new kakao.maps.MarkerImage( // 마우스를 올릴시 확대된 마커 이미지
+                                "http://t1.daumcdn.net/mapjsapi/images/marker.png",
+                                new kakao.maps.Size(30, 42)
+                             );
+
+                             var content = positions[i]
+
+                             // 클로저를 작성하지 않으면 마지막 마커에만 이벤트 적용됨
+                             kakao.maps.event.addListener(marker, 'mouseover', mouseOverListener(map, marker, overImage));
+                             kakao.maps.event.addListener(marker, 'mouseout', mouseOutListener(marker));
+                             kakao.maps.event.addListener(marker, 'click', clickListener(marker, content));
+                         }
+
+                         // 마우스오버시 마커 이미지 변경
+                         function mouseOverListener(map, marker, overImage) {
+                            return function() {
+                            marker.setImage(overImage);
+                            };
+                         }
+
+                         // 마우스아웃시 마커 이미지
+                         function mouseOutListener(marker) {
+                             return function() {
+                                 marker.setImage(markerImage);
+                             };
+                         }
+
+                         // 마커 클릭시
+                         function clickListener(marker, content) {
+                            return function() {
+                                var info = document.createElement("p") // <p> 생성
+                                count = 0
+                                info.setAttribute("id", 'new') // id 요소 추가
+                                info.setAttribute("style",
+                                "width:900px;margin:auto;padding:10px;border-radius:10px") // style 지정
+
+
+
+                                info.innerHTML = "<b>" + content.자동차정비업체명 + "</b>"
+                                    + "<br>" + "<font size=2>" + "자동차정비업체종류 : " + content.자동차정비업체종류 + "급"
+                                    + "<br>주소 : " + content.주소
+                                    + "<br>운영시작시간 : " + content.운영시작시각
+                                    + "&nbsp&nbsp&nbsp&nbsp&nbsp운영종료시간 : " + content.운영종료시각
+                                    + "<br>전화번호 : " + content.전화번호 + "</fonts>" + "<hr>"
+
+                                var list = document.getElementById('list');
+                                var p = document.getElementById('new');
+                                list.insertBefore(info, p); // list의 new 앞에 추가
+
+                                while(list.children.length > 3) {
+                                    list.removeChild(list.lastChild); //마지막 노드를 삭제
+                                }
+                            }
+                         }
+                     }
+                 });
+             }
+
+
+
+
+        </script>
+
+
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
