admin 버튼 활성화

--- a/django/templates/side01.html
+++ b/django/templates/side01.html
@@ -332,7 +332,7 @@
                         </form>
                     </ul>
                     <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit" onclick="admin();">
+                        <button class="btn btn-outline-dark" type="button" onclick="admin();">
                             <img src="https://cdn-icons-png.flaticon.com/512/3934/3934107.png" width="25px">
                             Admin
                         </button>
