--- a/django/templates/side01.html
+++ b/django/templates/side01.html
@@ -7,6 +7,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>과실비율확인</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -51,8 +52,307 @@
             border-radius: 5px;
             cursor: pointer;
             }
+            #showRate{
+            /* bottom, top, left, margin 조절 필요 */
+            width: 100%; 
+            height: 50%; 
+            float: left; 
+            margin: 100px 0 0 0; 
+            border: 1px solid #dcdcdc; 
+            background-color: #ffffff; 
+            left: 0px; 
+            top: 0px; 
+            bottom: 0px;
+            position: fixed; 
+            overflow: hidden; 
+            z-index: 10;
+        }
+        #resultClose{
+            float: right; 
+            margin: 5px 2% 5px 0; 
+            padding: 0px 5px 0px 5px; 
+            border: 1px solid #666666; 
+            cursor: pointer;
+        }
         </style>
+
+<script>
+    function getCookie(name) {
+        var cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            var cookies = document.cookie.split(';');
+            for (var i = 0; i < cookies.length; i++) {
+                var cookie = jQuery.trim(cookies[i]);
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+        }
+        var csrftoken = getCookie('csrftoken');
+</script>
+<script>
+    function changeMainCode() {
+        var mainCode = document.getElementById('selectMainCode').value;
+        // https://www.techiedelight.com/ko/get-value-of-checkbox-with-javascript/
+
+        if (mainCode == 1) {
+            document.getElementById("selectBox1").innerText = "① 사고 장소(차도유형)는 어디였나요?";
+            document.getElementById("selectBox2").innerText = "② 사고 장소(또는 형태)의 특징은 무엇인가요?"
+            document.getElementById("selectBox3").innerHTML = "③ <font style='color:#EA6816;'><strong>본인의 자동차</strong></font>는 어떻게 진행하였나요?"
+            document.getElementById("selectBox4").innerHTML = "④ <font style='color:#ECE865;'><strong>상대방의 자동차</strong></font>는 어떻게 진행하였나요?"
+        } else if (mainCode == 2) {
+            document.getElementById("selectBox1").innerText = "① 사고 장소(차도유형)는 어디였나요?"
+            document.getElementById("selectBox2").innerText = "② 사고 장소(또는 형태)의 특징은 무엇인가요?"
+            document.getElementById("selectBox3").innerHTML = "③ <font style='color:#EA6816;'><strong>본인의 자동차</strong></font>는 어떻게 진행하였나요?"
+            document.getElementById("selectBox4").innerHTML = "④ <font style='color:#ECE865;'><strong>상대방의 자동차</strong></font>는 어떻게 진행하였나요?"
+        } else if (mainCode == 3) {
+            document.getElementById("selectBox1").innerText = "① 사고 장소(횡단보도 관련)는 어디였나요?"
+            document.getElementById("selectBox2").innerText = "② 사고 장소(또는 형태)의 특징은 무엇인가요?"
+            document.getElementById("selectBox3").innerText = "③ 사람은 어떻게 걸어가고 있었나요?"
+            document.getElementById("selectBox4").innerText = "④ 자동차은 어떻게 진행하고 있었나요?"
+        } else if (mainCode == 4) {
+            document.getElementById("selectBox1").innerText = "① 사고 장소(차도유형)는 어디였나요?"
+            document.getElementById("selectBox2").innerText = "② 사고 장소(또는 형태)의 특징은 무엇인가요?"
+            document.getElementById("selectBox3").innerText = "③ 이륜차는 어떻게 진행하고 있었나요?"
+            document.getElementById("selectBox4").innerText = "④ 자동차은 어떻게 진행하고 있었나요?"
+        } else if (mainCode == 5) {
+            document.getElementById("selectBox1").innerText = "① 사고 장소(차도유형)는 어디였나요?"
+            document.getElementById("selectBox2").innerText = "② 사고 장소(또는 형태)의 특징은 무엇인가요?"
+            document.getElementById("selectBox3").innerText = "③ 자전거는 어떻게 진행하고 있었나요?"
+            document.getElementById("selectBox4").innerText = "④ 자동차은 어떻게 진행하고 있었나요?"
+        }
+
+        if (mainCode == 1) {
+            $("#selectValue1").find("option").remove().end().append("<option value=''>사고 장소(차도 유형)</option>");
+            $("#selectValue2").find("option").remove().end().append("<option value=''>사고 장소(또는 형태) 특징</option>");
+            $("#selectValue3").find("option").remove().end().append("<option value=''>본인 자동차 A</font></option>");
+            $("#selectValue4").find("option").remove().end().append("<option value=''>상대방 자동차 B</font></option>");
+        } else if (mainCode == 2) {
+            $("#selectValue1").find("option").remove().end().append("<option value=''>사고 장소(차도 유형)</option>");
+            $("#selectValue2").find("option").remove().end().append("<option value=''>사고 장소(또는 형태) 특징</option>");
+            $("#selectValue3").find("option").remove().end().append("<option value=''>본인 자동차 A</font></option>");
+            $("#selectValue4").find("option").remove().end().append("<option value=''>상대방 자동차 B</font></option>");
+        } else if (mainCode == 3) {
+            $("#selectValue1").find("option").remove().end().append("<option value=''>사고 장소(횡단보도 관련)</option>");
+            $("#selectValue2").find("option").remove().end().append("<option value=''>사고 장소(또는 형태) 특징</option>");
+            $("#selectValue3").find("option").remove().end().append("<option value=''>사람</option>");
+            $("#selectValue4").find("option").remove().end().append("<option value=''>자동차</option>");
+        } else if (mainCode == 4) {
+            $("#selectValue1").find("option").remove().end().append("<option value=''>사고 장소(차도 유형)</option>");
+            $("#selectValue2").find("option").remove().end().append("<option value=''>사고 장소(또는 형태) 특징</option>");
+            $("#selectValue3").find("option").remove().end().append("<option value=''>오토바이</option>");
+            $("#selectValue4").find("option").remove().end().append("<option value=''>자동차</option>");
+        } else if (mainCode == 5) {
+            $("#selectValue1").find("option").remove().end().append("<option value=''>사고 장소(차도 유형)</option>");
+            $("#selectValue2").find("option").remove().end().append("<option value=''>사고 장소(또는 형태) 특징</option>");
+            $("#selectValue3").find("option").remove().end().append("<option value=''>자전거</option>");
+            $("#selectValue4").find("option").remove().end().append("<option value=''>자동차</option>");
+        }
+
+        function csrfSafeMethod(method) {
+            // these HTTP methods do not require CSRF protection
+            return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+        }
+        $.ajaxSetup({
+            beforeSend: function(xhr, settings) {
+                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                }
+            }
+        });
+        $.ajax({
+            type: "POST",
+            url: "/codeA",
+            data: {
+                data: mainCode
+                
+            },
+            success: function(response) {
+                const keys = Object.keys(response);
+                console.log(response)
+                // var selectLength = document.getElementById("selectValue1");
+                // while (selectLength.length > 0) {
+                // selectLength.remove(selectLength.length - 1);
+                // }
+                $(keys).each(function(i){
+                    $("#selectValue1").append("<option value='" + keys[i] + "'>" + response[keys[i]] + "</option>");
+                })
+            }
+        });
+    }
+
+    function changeACode(){
+        var mainCode = document.getElementById('selectMainCode').value;
+        var codeA = $("#selectValue1").val();
+
+        if (mainCode == 1) {
+            $("#selectValue2").find("option").remove().end().append("<option value=''>사고 장소(또는 형태) 특징</option>");
+            $("#selectValue3").find("option").remove().end().append("<option value=''>본인 자동차 A</font></option>");
+            $("#selectValue4").find("option").remove().end().append("<option value=''>상대방 자동차 B</font></option>");
+        } else if (mainCode == 2) {
+            $("#selectValue2").find("option").remove().end().append("<option value=''>사고 장소(또는 형태) 특징</option>");
+            $("#selectValue3").find("option").remove().end().append("<option value=''>본인 자동차 A</font></option>");
+            $("#selectValue4").find("option").remove().end().append("<option value=''>상대방 자동차 B</font></option>");
+        } else if (mainCode == 3) {
+            $("#selectValue2").find("option").remove().end().append("<option value=''>사고 장소(또는 형태) 특징</option>");
+            $("#selectValue3").find("option").remove().end().append("<option value=''>사람</option>");
+            $("#selectValue4").find("option").remove().end().append("<option value=''>자동차</option>");
+        } else if (mainCode == 4) {
+            $("#selectValue2").find("option").remove().end().append("<option value=''>사고 장소(또는 형태) 특징</option>");
+            $("#selectValue3").find("option").remove().end().append("<option value=''>오토바이</option>");
+            $("#selectValue4").find("option").remove().end().append("<option value=''>자동차</option>");
+        } else if (mainCode == 5) {
+            $("#selectValue2").find("option").remove().end().append("<option value=''>사고 장소(또는 형태) 특징</option>");
+            $("#selectValue3").find("option").remove().end().append("<option value=''>자전거</option>");
+            $("#selectValue4").find("option").remove().end().append("<option value=''>자동차</option>");
+        }
+
+        $.ajax({
+            type: "POST",
+            url: "/codeB",
+            data: {
+                mainCodeK : mainCode,
+                codeAK : codeA
+            },
+            success: function(response) {
+                const keys = Object.keys(response);
+                console.log(response)
+                $(keys).each(function(i){
+                    $("#selectValue2").append("<option value='" + keys[i] + "'>" + response[keys[i]] + "</option>");
+                })
+            }
+        });
+    }
+
+    function changeBCode(){
+        var mainCode = document.getElementById('selectMainCode').value;
+        var codeA = $("#selectValue1").val();
+        var codeB = $('#selectValue2').val();
+
+        if (mainCode == 1) {
+            $("#selectValue3").find("option").remove().end().append("<option value=''>본인 자동차 A</font></option>");
+            $("#selectValue4").find("option").remove().end().append("<option value=''>상대방 자동차 B</font></option>");
+        } else if (mainCode == 2) {
+            $("#selectValue3").find("option").remove().end().append("<option value=''>본인 자동차 A</font></option>");
+            $("#selectValue4").find("option").remove().end().append("<option value=''>상대방 자동차 B</font></option>");
+        } else if (mainCode == 3) {
+            $("#selectValue3").find("option").remove().end().append("<option value=''>사람</option>");
+            $("#selectValue4").find("option").remove().end().append("<option value=''>자동차</option>");
+        } else if (mainCode == 4) {
+            $("#selectValue3").find("option").remove().end().append("<option value=''>오토바이</option>");
+            $("#selectValue4").find("option").remove().end().append("<option value=''>자동차</option>");
+        } else if (mainCode == 5) {
+            $("#selectValue3").find("option").remove().end().append("<option value=''>자전거</option>");
+            $("#selectValue4").find("option").remove().end().append("<option value=''>자동차</option>");
+        }
+
+        $.ajax({
+            type: "POST",
+            url: "/codeC",
+            data: {
+                mainCodeK : mainCode,
+                codeAK : codeA,
+                codeBK : codeB
+            },
+            success: function(response) {
+                const keys = Object.keys(response);
+                console.log(response)
+                $(keys).each(function(i){
+                    $("#selectValue3").append("<option value='" + keys[i] + "'>" + response[keys[i]] + "</option>");
+                })
+            }
+        });
+    }
+
+    function changeCCode(){
+        var mainCode = document.getElementById('selectMainCode').value;
+        var codeA = $("#selectValue1").val();
+        var codeB = $('#selectValue2').val();
+        var codeC = $('#selectValue3').val();
+
+        if (mainCode == 1) {
+            $("#selectValue4").find("option").remove().end().append("<option value=''>상대방 자동차 B</font></option>");
+        } else if (mainCode == 2) {
+            $("#selectValue4").find("option").remove().end().append("<option value=''>상대방 자동차 B</font></option>");
+        } else if (mainCode == 3) {
+            $("#selectValue4").find("option").remove().end().append("<option value=''>자동차</option>");
+        } else if (mainCode == 4) {
+            $("#selectValue4").find("option").remove().end().append("<option value=''>자동차</option>");
+        } else if (mainCode == 5) {
+            $("#selectValue4").find("option").remove().end().append("<option value=''>자동차</option>");
+        }
+
+        $.ajax({
+            type: "POST",
+            url: "/codeD",
+            data: {
+                mainCodeK : mainCode,
+                codeAK : codeA,
+                codeBK : codeB,
+                codeCK : codeC,
+            },
+            success: function(response) {
+                const keys = Object.keys(response);
+                console.log(response)
+                $(keys).each(function(i){
+                    $("#selectValue4").append("<option value='" + keys[i] + "'>" + response[keys[i]] + "</option>");
+                })
+            }
+        });
+    }
+
+    function getRate(){
+            var mainCode = document.getElementById('selectMainCode').value;
+            var codeA = $("#selectValue1").val();
+            var codeB = $('#selectValue2').val();
+            var codeC = $('#selectValue3').val();
+            var codeD = $('#selectValue4').val();
+            $.ajax({
+                type: "POST",
+                url: "/rate",
+                data: {
+                    mainCodeK : mainCode,
+                    codeAK : codeA,
+                    codeBK : codeB,
+                    codeCK : codeC,
+                    codeDK : codeD
+                },
+                success: function(response) {
+                    const keys = Object.keys(response);
+                    var myRate = response.split(',')[0]
+                    var yourRate = 100 - parseInt(myRate)
+                    var result = document.getElementById("showRate")
+                    if (result.style.display =='none'){
+                        result.style.display = 'block'
+                    }
+                    else{
+                        result.style.display = 'none'
+                    }
+                    console.log(response)
+                    $("#myRate").find("div").remove().end().append("<div>" + myRate + "</div>");
+                    $("#yourRate").find("div").remove().end().append("<div>" + yourRate + "</div>");
+                }
+            });
+        }
+        function resClose(){
+            var result = document.getElementById("showRate")
+            if (result.style.display =='none'){
+                result.style.display = 'block'
+            }
+            else{
+                result.style.display = 'none'
+            }
+        }
+    </script>
     </head>
+
+
+
+
     <body>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -87,42 +387,47 @@
             </div>
         </header>
         <!-- Section-->
+        <!-- name=select03~... => id=selectValue0..... -->
         <div class="service">
             <p>1. 사고 상대를 선택해주세요.</p>
-            <select name="select01">
-                <option value="car">차 대 차</option>
-                <option value="highway">고속도로</option>
-                <option value="human">차 대 사람</option>
-                <option value="motorcycle">차 대 이륜차</option>
-                <option value="bike">차 대 자전거</option>
+            <select id="selectMainCode" onchange="changeMainCode();">
+                <option value="" selected >선택하세요</option>
+                <option value="1" >차 대 차</option>
+                <option value="2" >고속도로</option>
+                <option value="3" >차 대 사람</option>
+                <option value="4" >차 대 이륜차</option>
+                <option value="5" >차 대 자전거</option>
             </select><br><br><br>
-            <p>2. 사고 장소(차도유형)는 어디였나요?</p>
-            <select name="select02">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
+
+            <div id="selectBox1">2. 사고 장소(차도유형)는 어디였나요?</div>
+            <select id="selectValue1" type="text" onchange="javascript:changeACode();">
+                <option value="">사고 장소(차도 유형)</option>
             </select><br><br><br>
-            <p>3. 사고 장소(떠는 형태)의 특징은 무엇인가요?</p>
-            <select name="select03">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
+
+            <div id="selectBox2">3. 사고 장소(또는 형태)의 특징은 무엇인가요?</div>
+            <select id="selectValue2" type="text" onchange="javascript:changeBCode();">								
+                <option value="">사고 장소(또는 형태) 특징</option>
             </select><br><br><br>
-            <p>4. 본인(또는 상대방) 자동차 A는 어떻게 진행하였나요?</p>
-            <select name="select04">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-            </select><br><br><br>
-            <p>5. 상대방(또는 본인) 자동차 B는 어떻게 진행하였나요?</p>
-            <select name="select05">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-            </select>
+            
+            <div id="selectBox3">4. 본인(또는 상대방) 자동차 A는 어떻게 진행하였나요?</div>
+            <select id="selectValue3" type="text" onchange="javascript:changeCCode();">								
+                <option value="">본인(또는 상대방) 자동차 A</option></select><br><br><br>
+            
+            <div id="selectBox4">5. 상대방(또는 본인) 자동차 B는 어떻게 진행하였나요?</div>
+            <select id="selectValue4" type="text">							
+                <option value="">상대방(또는 본인) 자동차 B</option></select>
             <br><br>
-            <button type="button" class="check">과실비율 확인하기</button>
+
+            <input id="select_select_search" type="button" onclick="javascript:getRate();" value="과실비율 확인하기">
+            <div id="showRate" style="display: none; ">
+                <div id="resultClose" onclick="javascript:resClose();">X</div>
+                <div id="myRate"><font style='color:#EA6816;'><strong>3: </strong></font></div>
+                <div></div>
+                <div id="yourRate"><font style='color:#ECE865;'><strong>4: </strong></font></div>
+                <div></div>
+            </div>
         </div><br><br><br><br><br><br>
+
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
