index img change

--- a/django/templates/index.html
+++ b/django/templates/index.html
@@ -55,7 +55,7 @@
                         <div class="card h-100">
                             <a style="text-decoration:none; color:black;" onclick="location.href='{%url 'main'%}'">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://lh3.google.com/u/0/d/1m69slGqBt381ifZhaoWDJw23jZ4fkTxH=w3456-h1936-iv1" alt="..." height="200px"/>
+                            <img class="card-img-top" src="https://img.freepik.com/free-vector/people-exchanging-a-car-tire_53876-43025.jpg" alt="..." height="200px"/>
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -76,7 +76,7 @@
                         <div class="card h-100">
                             <a style="text-decoration:none; color:black;" onclick="location.href='{%url 'side01'%}'">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://lh3.google.com/u/0/d/1CbXv-uo9kVi_pQBAP7vsOWjZKxBFbqz0=w2194-h1936-iv1" alt="..." height="200px"/>
+                            <img class="card-img-top" src="https://img.freepik.com/free-vector/car-crash-concept-illustration_114360-8090.jpg?t=st=1674102243~exp=1674102843~hmac=74596c8e50e0ebd6ebfd19e62146153a2d07913bb2daee1beb56dcf224b53c88" alt="..." height="200px"/>
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -97,7 +97,7 @@
                         <div class="card h-100">
                             <a style="text-decoration:none; color:black;" onclick="location.href='{%url 'side02'%}'">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://lh3.google.com/u/0/d/1R1s4niXtdUSbal4aAh3haSl1gzf86ljX=w2194-h1936-iv1" alt="..." height="200px"/>
+                            <img class="card-img-top" src="https://img.freepik.com/free-vector/auto-tuner-with-wrench-and-toolbox-doing-vehicle-modification-at-car-service-car-tuning-car-body-shop-vehicle-music-upgrade-concept_335657-2203.jpg?t=st=1674102280~exp=1674102880~hmac=8056e93f721d96d38f5492bd3e3c87437500f36fe2de59af313ea9d76d42dc5b" alt="..." height="200px"/>
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -118,7 +118,7 @@
                         <div class="card h-100">
                             <a style="text-decoration:none; color:black;" onclick="location.href='{%url 'side03'%}'">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://lh3.google.com/u/0/d/1lx--rNAsgOVbDSab3xpzDJ3s2BE_Nz4p=w2194-h1936-iv1" alt="..." height="200px"/>
+                            <img class="card-img-top" src="https://img.freepik.com/free-vector/tiny-people-testing-quality-assurance-in-software-isolated-flat-vector-illustration-cartoon-character-fixing-bugs-in-hardware-device-application-test-and-it-service-concept_74855-10172.jpg?t=st=1674102378~exp=1674102978~hmac=5fec0cd1077025675194f859929c7bf6cb0502fb0a4fc681cfc6ef421abbf82f" alt="..." height="200px"/>
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
