--- a/django/templates/side03.html
+++ b/django/templates/side03.html
@@ -28,13 +28,6 @@
             transform: translate(-50%, -50%);
             text-align: center;
             }
-        select{
-            width: 400px;
-            height: 32px;
-            font-size: 15px;
-            border: 1px solid black;
-            border-radius: 15px;
-            }
         footer{
             position:static;
             left:0px;
@@ -55,8 +48,11 @@
             border-radius: 5px;
             cursor: pointer;
             }
+        #search_form {
+            padding: 70px;
+         }
         .selectbox{
-            width:280px;
+            width:40%;
             height: 50px;
             border-radius: 5px 5px 5px 5px;
             border-width: 3px;
@@ -64,32 +60,81 @@
             font-size: 18px;
             }
         .searchbox{
-            width:550px;
+            width:87%;
             height: 60px;
             border-width: 5px;
             margin-top:10px;
             font-size: 25px;
-
             }
-        .div{
+        .div_search{
             width:600px;
             margin:auto;
             }
+        .div_select{
+            width:600px;
+            margin:auto;
+        }
         .send_btn{
             width: 55px;
             height: 60px;
             position: absolute;
             background: #14279B;
             broder: none;
-            font-weight: bold; color: white; font-size: 20px;
+            font-weight: bold;
+            color: white;
+            font-size: 20px;
             margin-top:10px;
-            }
+        }
         .searchbox:focus {
             outline : none ;
-           }
+        }
         .table {
              padding: 10px;
              border-bottom: 1px solid gray;
+        }
+        .result_cnt {
+            width:900px;
+            text-align:right;
+            margin:auto;
+            margin-bottom:10px
+        }
+        section {
+            width:900px;
+            height:700px;
+            margin:auto;
+            display:none;
+            margin-bottom:20px;
+        }
+        #pagination {
+            width:900px;
+            margin:auto;
+            text-align:center;
+            padding:auto
+        }
+
+        @media ( max-width: 480px ) {
+            .div_search{
+                width: auto;
+            }
+            .div_select{
+                width: auto;
+            }
+            #search_form {
+                padding: 50px;
+            }
+            .result_cnt {
+                width: auto;
+                text-align:right;
+                margin:auto;
+                margin-bottom:10px
+            }
+            section {
+                width:auto;
+            }
+            th, td {
+             font-size: 10px;
+            }
+
         }
         </style>
 
@@ -130,13 +175,12 @@
             </div>
         </header>
         <!-- Section-->
-        <form name="search_form" style="width:900px;height:200px;margin:auto;margin-top:70px;text-align:center;">
-            <span>
-                <button onclick="reset()" class="btn-reset" title="검색조건 초기화" style="background:white;border:none;margin-left:45px">
-                    <img src="{% static 'static03/images/reset-button.png' %}" style="width:25px;height:25px;margin:10px;">
+        <form id="search_form">
+            <div class="div_select">
+
+                <button onclick="reset()" class="btn-reset" title="검색조건 초기화" style="border:none;background-color:white">
+                    <img src="{% static 'static03/images/reset-button.png' %}" style="width:25px;height:25px;border:none;margin-right:10px">
                 </button>
-            </span>
-            <span>
                 <select id="s_type" class="selectbox">
                     <option value="">정비업체분류</option>
                     <option value="1">1급</option>
@@ -144,24 +188,23 @@
                     <option value="3">3급</option>
                     <option value="4">4급</option>
                 </select>
-            </span>
-            <span>
                 <select id="running" class="selectbox" >
                     <option value="">영업상태</option>
                     <option value="1">영업</option>
                     <option value="2">휴업</option>
                     <option value="3">폐업</option>
                 </select>
-            </span>
-            <div class="div">
+            </div>
+
+            <div class="div_search">
                 <input name="words" class="searchbox" style="border:4px solid #14279B">
                 <button class = "send_btn" type="button" style="border: none">검색&nbsp</button>
             </div>
         </form>
 
-        <div>
-            <p class="result_cnt" style="width:900px;text-align:right;margin:auto;margin-bottom:10px"></p>
-            <section class='result' style="width:900px;height:700px;margin:auto;display:none">
+
+            <p class="result_cnt"></p>
+            <section class='result'>
                 <table class='table' id="data-container">
                     <col width="50">
                     <col width="200">
@@ -180,9 +223,8 @@
 
                 </table>
                 <br>
-                <div id="pagination" style="width:900px;margin:auto;text-align:center;padding:auto"></div>
+                <div id="pagination"></div>
             </section>
-        </div>
 
 
         <!-- Footer-->
@@ -242,6 +284,7 @@
                         var dataHtml = document.createElement("tbody")
 
                         $.each(data, function (index, item) {
+
 
                                 var tr = document.createElement("tr");
                                 var id = document.createElement("td");
