elk 대시보드 추가

--- a/django/templates/usage.html
+++ b/django/templates/usage.html
@@ -2,6 +2,6 @@
 
 {%block content%}
 <div>
-    서비스 이용현황 조회
+    <iframe src="http://34.64.199.58:5601/goto/05ecebd0-9d79-11ed-af2d-9583f58e91dd" height="2000" width="95%"></iframe>
 </div>
 {%endblock%}
