--- a/django/templates/visitor.html
+++ b/django/templates/visitor.html
@@ -2,6 +2,6 @@
 
 {%block content%}
 <div>
-    방문자 현황
+    <iframe src="http://34.64.199.58:5601/goto/3af112e0-9d77-11ed-af2d-9583f58e91dd" height="1000" width="95%"></iframe>
 </div>
 {%endblock%}
