--- a/django/templates/admin.html
+++ b/django/templates/admin.html
@@ -5,7 +5,7 @@
     <div class="container-fluid px-4">
         <h1 class="mt-4">Dashboard</h1>
         <ol class="breadcrumb mb-4">
-            <li class="breadcrumb-item active">Dashboard</li>
+            <li class="breadcrumb-item active">최근 방문자 현황과 서비스 이용현황을 간단하게 안내합니다.</li>
         </ol>
         <div class="row">
             <div class="col-xl-6">
@@ -14,7 +14,9 @@
                         <i class="fas fa-chart-area me-1"></i>
                         방문자 현황
                     </div>
-                    <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
+                    <div class="card-body">
+			    <iframe src="http://34.64.199.58:5601/goto/923402d0-9d75-11ed-af2d-9583f58e91dd" height="500" width="650"></iframe>
+		    </div>
                 </div>
             </div>
             <div class="col-xl-6">
@@ -23,7 +25,9 @@
                         <i class="fas fa-chart-bar me-1"></i>
                         서비스 이용현황
                     </div>
-                    <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
+                    <div class="card-body">
+			    <iframe src="http://34.64.199.58:5601/goto/ceddcbd0-9d75-11ed-af2d-9583f58e91dd" height="500" width="650"></iframe>
+		    </div>
                 </div>
             </div>
         </div>
